--- a/PlixColors/PlixColors.csproj
+++ b/PlixColors/PlixColors.csproj
@@ -4,20 +4,34 @@
         <LangVersion>latest</LangVersion>
         <DebugType>embedded</DebugType>
 
-        <VersionPrefix>0.1.0</VersionPrefix>
+        <VersionPrefix>1.0.0</VersionPrefix>
         <VersionSuffix>dev</VersionSuffix>
+		
         <Description>PlixColors</Description>
         <Authors>amsyarasyiq</Authors>
+		<Nullable>enable</Nullable>
     </PropertyGroup>
 
-    <ItemGroup>
-        <Reference Include="$(AmongUs)/BepInEx/core/*.dll" />
-        <Reference Include="$(AmongUs)/BepInEx/unhollowed/*.dll" />
-    </ItemGroup>
+	<PropertyGroup>
+		<GamePlatform Condition="'$(GamePlatform)' == ''">Steam</GamePlatform>
+		<GameVersion Condition="'$(GamePlatform)' == 'Steam'">2021.12.14</GameVersion>
+		<GameVersion Condition="'$(GamePlatform)' == 'Itch'">2021.12.14</GameVersion>
+	</PropertyGroup>
 
-    <Target Name="Copy" AfterTargets="AfterBuild" Condition="'$(AmongUs)' != ''">
-        <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" 
-              DestinationFolder="$(AmongUs)/BepInEx/plugins/" />
-    </Target>
+	<ItemGroup>
+		<PackageReference Include="Reactor" Version="1.1.0" />
+		<PackageReference Include="BepInEx.IL2CPP" Version="6.0.0-be.525" />
+		<PackageReference Include="AmongUs.GameLibs.$(GamePlatform)" Version="$(GameVersion)" PrivateAssets="all" />
 
+		<PackageReference Include="BepInEx.AutoPlugin" Version="1.0.1" PrivateAssets="all" />
+		<PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="1.0.2" PrivateAssets="all" />
+	</ItemGroup>
+
+	<Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
+		<Copy 
+			SourceFiles="$(TargetPath)" 
+			DestinationFolder="$(AmongUs)/BepInEx/plugins/" 
+			UseSymboliclinksIfPossible="true" 
+		/>
+	</Target>
 </Project>
